integ-tests/tests/snapshots/parser__bad_nesting__array_then_dotted_array.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[duplicate-key]: 
  ┌─ array_then_dotted_array:3:11
  │
2 │         a = []
  │         - first key instance
3 │         [[a.b]]
  │           ^ duplicate key


