integ-tests/tests/snapshots/parser__bad_nesting__inline.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[duplicate-key]: 
  ┌─ inline:4:12
  │
3 │         b = { c = 2, d = {} }
  │         - first key instance
4 │         [a.b]
  │            ^ duplicate key


