integ-tests/tests/snapshots/parser__bad_nesting__key_then_array.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[duplicate-key]: 
  ┌─ key_then_array:3:11
  │
2 │         a = [2]
  │         - first key instance
3 │         [[a]]
  │           ^ duplicate key


